Cleaning the README and Ep5

--- a/Exp5.ipynb
+++ b/Exp5.ipynb
@@ -133,6 +133,9 @@
       "    return data[:nbsamples]\n",
       "\n",
       "TRAJS = mountain_car_IRL_data(NB_SAMPLES)\n",
+      "while all(TRAJS[:,2]==-1):\n",
+      "    print \"Resampling manual policy until we get 2 actions\"\n",
+      "    TRAJS = mountain_car_IRL_data(NB_SAMPLES)\n",
       "\n",
       "psi=mountain_car_psi\n",
       "phi=mountain_car_phi\n",
