--- a/README.org
+++ b/README.org
@@ -4,10 +4,10 @@
 [[Exp2.py]] : Finding out in which areas of the state space of the inverted pendulum the expert is good.
 [[Exp3.py]] : Trying to find what to plot with CSI on the inverted pendulum.
 [[file:Exp4.py]] : Testing different parameters for LSPI  and CSI on the Mountain Car.
-[[Exp5.py]] : Running all algos (SCRIL x2, SCI, Classif, RE) on the Mountain Car.
-[[Exp6.py]] : Trying to find a good way to plot the data of Exp5.
-[[file:Exp7.py]] Running SCIRL on the Mountain Car
+[[file:Exp5.py]] : Running all algos (SCRIL x2, SCI, Classif, RE) on the Mountain Car.
+[[file:Exp6.py]] : Evaluating the policies found in Exp5.
+[[file:Exp7.py]] : Running SCIRL on the Mountain Car
 [[file:Exp8.py]] : Relative entropy on the mountain car.
 [[file:Exp9.py]] : Cascading on the data from Asterix
 [[file:Exp10.py]] : Relative Entropy on the Highway
-
+[[file:Exp11.py]] : Plotting the results of different IRL algos on the mountain car
