Exp12: SCIRL (MC) on the Highway

--- a/Exp10.ipynb
+++ b/Exp10.ipynb
@@ -11,7 +11,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "#Training an expert on the highway\n",
+      "#Relative Entropy on the Highway\n",
       "from DP import *\n",
       "P = genfromtxt(\"Highway_P.mat\")\n",
       "R = genfromtxt(\"Highway_R.mat\")\n",
