Bug fix in Highway reward.

--- a/Highway.ipynb
+++ b/Highway.ipynb
@@ -31,7 +31,7 @@
       "    return index\n",
       "\n",
       "def sa_index( state, action ):\n",
-      "    index = s_index(state) + a*3*9*9*3\n",
+      "    index = s_index(state) + action*3*9*9*3\n",
       "    return index\n",
       "\n",
       "def next_states( state, action ):\n",
@@ -90,7 +90,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 11
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -119,7 +119,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 12
+     "prompt_number": 3
     }
    ],
    "metadata": {}
