Bugfix in Exp12 in sa_index.

--- a/Exp12.ipynb
+++ b/Exp12.ipynb
@@ -11,6 +11,18 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "%load_ext autoreload\n",
+      "%autoreload 2"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 2
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "#SCIRL on the Highway\n",
       "from DP import *\n",
       "from stuff import *\n",
@@ -27,18 +39,6 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": 8
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "%load_ext autoreload\n",
-      "%autoreload 2"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -411,7 +411,7 @@
       "    return index\n",
       "\n",
       "def sa_index( state, action ):\n",
-      "    index = s_index(state) + a*3*9*9*3\n",
+      "    index = s_index(state) + action*3*9*9*3\n",
       "    return index\n",
       "\n",
       "print reward_SCIRL_short.shape\n",
@@ -612,6 +612,14 @@
       }
      ],
      "prompt_number": 16
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
