--- a/Exp13.ipynb
+++ b/Exp13.ipynb
@@ -45,7 +45,8 @@
      "collapsed": false,
      "input": [
       "Highway = MDP(P,R)\n",
-      "mPi_E, V_E, Pi_E = Highway.optimal_policy()"
+      "mPi_E, V_E, Pi_E = Highway.optimal_policy()\n",
+      "Highway.evaluate(mPi_E)"
      ],
      "language": "python",
      "metadata": {},
@@ -60,7 +61,7 @@
         "Card of S 729\n",
         "Card of A 5\n",
         "Card of SA 3645\n",
-        "Iteration 0, 729\tactions changed."
+        "Iteration 0, 888\tactions changed."
        ]
       },
       {
@@ -68,7 +69,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Iteration 0, 578\tactions changed."
+        "Iteration 1, 800\tactions changed."
        ]
       },
       {
@@ -76,7 +77,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Iteration 0, 746\tactions changed."
+        "Iteration 2, 234\tactions changed."
        ]
       },
       {
@@ -84,7 +85,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Iteration 0, 384\tactions changed."
+        "Iteration 3, 50\tactions changed."
        ]
       },
       {
@@ -92,23 +93,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Iteration 0, 192\tactions changed."
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "Iteration 0, 24\tactions changed."
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "Iteration 0, 0\tactions changed."
+        "Iteration 4, 0\tactions changed."
        ]
       },
       {
@@ -116,6 +101,13 @@
        "stream": "stdout",
        "text": [
         "\n"
+       ]
+      },
+      {
+       "output_type": "pyout",
+       "prompt_number": 3,
+       "text": [
+        "7.7439104526748785"
        ]
       }
      ],
@@ -126,12 +118,13 @@
      "collapsed": false,
      "input": [
       "rho = lambda : int(rand()*729) #uniform distribtion over S\n",
-      "D_E = array(Highway.D_func(Pi_E, 1, 100,  rho))"
+      "l_D_E = [array(Highway.D_func(Pi_E, 1, 7,  rho)) for i in range(0,7)]\n",
+      "D_E = vstack(l_D_E)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
@@ -178,7 +171,7 @@
       "\n",
       "class StructuredClassifier(GradientDescent):\n",
       "    sign=-1.\n",
-      "    Threshold=0.1 #Sensible default\n",
+      "    Threshold=0.01 #Sensible default\n",
       "    T=100 #Sensible default\n",
       "    phi=None\n",
       "    label_set=None\n",
@@ -228,13 +221,19 @@
       "    Psi[i,j]=1.\n",
       "clf = StructuredClassifier(Psi, D_E[:,1], 5)\n",
       "theta_C = clf.run()\n",
+      "mPi_C = Highway.Q2Pi(theta_C)\n",
+      "\n",
       "def single_phi(sa):\n",
       "    answer = zeros((3645,1))\n",
       "    answer[sa[0] + 729*sa[1]] = 1.\n",
       "    return answer\n",
       "phi = non_scalar_vectorize(single_phi, (2,), (3645,1))\n",
       "q = lambda sa: squeeze(dot(theta_C.transpose(),phi(sa)))\n",
-      "pi_c = greedy_policy(theta_C,phi,ACTION_SPACE, s_dim=1)"
+      "#pi_c = greedy_policy(theta_C,phi,ACTION_SPACE, s_dim=1)\n",
+      "single_pi_c = lambda s : Highway.control(s, mPi_C)\n",
+      "pi_c = vectorize(single_pi_c)\n",
+      "Highway.evaluate(mPi_C)\n",
+      "#theta_C.min(),theta_C.max(),theta_C.mean(),theta_C.var()"
      ],
      "language": "python",
      "metadata": {},
@@ -243,13 +242,17 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Norme du gradient : 0.324345494805, pas : 1.5, iteration : 1\n",
-        "Norme du gradient : 0.324345494805, pas : 1.0, iteration : 2\n",
-        "Norme du gradient : 0.324345494805, pas : 0.75, iteration : 3\n",
-        "Norme du gradient : 0.324345494805, pas : 0.6, iteration : 4\n",
-        "Norme du gradient : 0.324345494805, pas : 0.5, iteration : 5\n",
-        "Norme du gradient : 0.215406592285, pas : 0.428571428571, iteration : 6\n",
-        "Norme du gradient : 0.132664991614, pas : 0.375, iteration : 7"
+        "Norme du gradient : 0.259753511456, pas : 1.5, iteration : 1\n",
+        "Norme du gradient : 0.259753511456, pas : 1.0, iteration : 2\n",
+        "Norme du gradient : 0.259753511456, pas : 0.75, iteration : 3\n",
+        "Norme du gradient : 0.259753511456, pas : 0.6, iteration : 4\n",
+        "Norme du gradient : 0.212087853988, pas : 0.5, iteration : 5\n",
+        "Norme du gradient : 0.212087853988, pas : 0.428571428571, iteration : 6\n",
+        "Norme du gradient : 0.212087853988, pas : 0.375, iteration : 7\n",
+        "Norme du gradient : 0.147165358182, pas : 0.333333333333, iteration : 8\n",
+        "Norme du gradient : 0.147165358182, pas : 0.3, iteration : 9\n",
+        "Norme du gradient : 0.147165358182, pas : 0.272727272727, iteration : 10\n",
+        "Norme du gradient : 0.147165358182, pas : 0.25, iteration : 11"
        ]
       },
       {
@@ -257,9 +260,14 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Norme du gradient : 0.132664991614, pas : 0.333333333333, iteration : 8\n",
-        "Norme du gradient : 0.12, pas : 0.3, iteration : 9\n",
-        "Norme du gradient : 0.12, pas : 0.272727272727, iteration : 10"
+        "Norme du gradient : 0.147165358182, pas : 0.230769230769, iteration : 12\n",
+        "Norme du gradient : 0.147165358182, pas : 0.214285714286, iteration : 13\n",
+        "Norme du gradient : 0.147165358182, pas : 0.2, iteration : 14\n",
+        "Norme du gradient : 0.147165358182, pas : 0.1875, iteration : 15\n",
+        "Norme du gradient : 0.147165358182, pas : 0.176470588235, iteration : 16\n",
+        "Norme du gradient : 0.147165358182, pas : 0.166666666667, iteration : 17\n",
+        "Norme du gradient : 0.147165358182, pas : 0.157894736842, iteration : 18\n",
+        "Norme du gradient : 0.147165358182, pas : 0.15, iteration : 19"
        ]
       },
       {
@@ -267,20 +275,20 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Norme du gradient : 0.12, pas : 0.25, iteration : 11\n",
-        "Norme du gradient : 0.06, pas : 0.230769230769, iteration : 12"
+        "Norme du gradient : 0.147165358182, pas : 0.142857142857, iteration : 20\n",
+        "Norme du gradient : 0.0, pas : 0.136363636364, iteration : 21\n",
+        "Gradient de norme : 0.0, a l'iteration : 21\n"
        ]
       },
       {
-       "output_type": "stream",
-       "stream": "stdout",
+       "output_type": "pyout",
+       "prompt_number": 18,
        "text": [
-        "\n",
-        "Gradient de norme : 0.06, a l'iteration : 12\n"
+        "0.18603042225294997"
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
@@ -296,39 +304,58 @@
       "sa_dash = hstack([s_dash,a_dash])\n",
       "hat_r = (q(sa)-Gamma*q(sa_dash)).reshape(column_shape)\n",
       "r_min = min(hat_r)-1.*ones(column_shape)\n",
-      "\n",
-      "##Avec l'heuristique : \n",
-      "regression_input_matrices = [hstack([s,action*ones(column_shape)]) for action in ACTION_SPACE] \n",
-      "def add_output_column( reg_mat ):\n",
-      "    actions = reg_mat[:,-1].reshape(column_shape)\n",
-      "    hat_r_bool_table = array(actions==a)\n",
-      "    r_min_bool_table = array(hat_r_bool_table==False) #\"not hat_r_bool_table\" does not work as I expected\n",
-      "    output_column = hat_r_bool_table*hat_r+r_min_bool_table*r_min\n",
-      "    return hstack([reg_mat,output_column])\n",
-      "regression_matrix = vstack(map(add_output_column,regression_input_matrices))\n",
-      "#R\u00e9gression\n",
-      "from sklearn.svm import SVR\n",
-      "y = regression_matrix[:,-1]\n",
-      "X = regression_matrix[:,:-1]\n",
-      "reg = SVR(C=1.0, epsilon=0.2)#, gamma=1/(2*pow(0.03,2)))\n",
-      "reg.fit(X, y)\n",
-      "fCSI_reward = lambda sa:reg.predict(sa)[0]"
+      "hat_r.max(),hat_r.min(),hat_r.mean(),hat_r.var()"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "ename": "ImportError",
-       "evalue": "No module named sklearn.svm",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-6-a057a9fd0008>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0mregression_matrix\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0madd_output_column\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mregression_input_matrices\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;31m#R\ufffd\ufffdgression\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msvm\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSVR\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mregression_matrix\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mregression_matrix\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;31mImportError\u001b[0m: No module named sklearn.svm"
+       "output_type": "pyout",
+       "prompt_number": 19,
+       "text": [
+        "(0.90745370252273583,\n",
+        " 0.81378476049769144,\n",
+        " 0.84300549231483712,\n",
+        " 0.0012630405356859849)"
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 19
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "##Avec l'heuristique : \n",
+      "thetas = zeros((5,729))\n",
+      "for action in ACTION_SPACE:\n",
+      "    X = Psi\n",
+      "    hat_r_bool_table = array(a==action)\n",
+      "    r_min_bool_table = array(hat_r_bool_table==False) #\"not hat_r_bool_table\" does not work as I expected\n",
+      "    Y =  hat_r_bool_table*hat_r + r_min_bool_table*r_min\n",
+      "    #if sum(hat_r_bool_table) == 0:\n",
+      "    #    thetas[action] = zeros(729)\n",
+      "    #else:\n",
+      "    thetas[action] = squeeze( dot(dot(inv(dot(X.transpose(),X)+0.1*identity(X.shape[1])),X.transpose()),Y) )\n",
+      "theta_CSI = thetas.reshape(3645)\n",
+      "fCSI_reward = lambda sa:dot(theta_CSI.transpose(),phi(sa))\n",
+      "theta_CSI.min(),theta_CSI.max(),theta_CSI.mean(),theta_CSI.var()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "pyout",
+       "prompt_number": 20,
+       "text": [
+        "(-0.18020829629255666,\n",
+        " 0.87818100244135722,\n",
+        " 0.00077942998079289676,\n",
+        " 0.0069801983477599302)"
+       ]
+      }
+     ],
+     "prompt_number": 20
     },
     {
      "cell_type": "code",
@@ -354,34 +381,216 @@
       "    return index\n",
       "\n",
       "def sa_index( state, action ):\n",
-      "    index = s_index(state) + a*3*9*9*3\n",
+      "    index = s_index(state) + action*3*9*9*3\n",
       "    return index\n",
       "\n",
       "reward_CSI=zeros((3645,1))\n",
       "for state in S:\n",
       "    for action in ACTION_SPACE:\n",
       "        index = sa_index(state, action)\n",
-      "        reward_CSI[index] = fCSI_reward(array([state,action]))"
+      "        reward_CSI[index] = fCSI_reward(array([s_index(state),action]))\n",
+      "Highway2 = MDP(P,reward_CSI)\n",
+      "mPi_A, V_A, Pi_A = Highway2.optimal_policy()\n",
+      "Highway.evaluate(mPi_A)\n",
+      "#reward_CSI.min(),reward_CSI.max(),reward_CSI.mean(),reward_CSI.var()"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "MDP OK3\n",
+        "Shape of P (3645, 729)\n",
+        "Shape of R (3645, 1)\n",
+        "Card of S 729\n",
+        "Card of A 5\n",
+        "Card of SA 3645\n",
+        "Iteration 0, 602\tactions changed."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Iteration 1, 878\tactions changed."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Iteration 2, 512\tactions changed."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Iteration 3, 162\tactions changed."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Iteration 4, 52\tactions changed."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Iteration 5, 10\tactions changed."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Iteration 6, 0\tactions changed."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
+       ]
+      },
+      {
+       "output_type": "pyout",
+       "prompt_number": 21,
+       "text": [
+        "7.342572892181054"
+       ]
+      }
+     ],
+     "prompt_number": 21
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "Highway2 = MDP(P,reward_CSI)\n",
-      "mPi_A, V_A, Pi_A = Highway2.optimal_policy()\n",
-      "true_V_A = linalg.solve( identity( 729 ) - 0.9*dot(mPi_A,P), dot( mPi_A, R) )\n",
+      "\n",
       "Highway3 = MDP(P,rand(3645,1))\n",
       "mPi_R, V_R, Pi_R = Highway3.optimal_policy()\n",
-      "true_V_R = linalg.solve( identity( 729 ) - 0.9*dot(mPi_R,P), dot( mPi_R, R) )\n",
-      "mean(true_V_A),mean(true_V_R),mean(V_E)"
+      "Highway.evaluate(mPi_R)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "MDP OK3\n",
+        "Shape of P (3645, 729)\n",
+        "Shape of R (3645, 1)\n",
+        "Card of S 729\n",
+        "Card of A 5\n",
+        "Card of SA 3645\n",
+        "Iteration 0, 1244\tactions changed."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Iteration 1, 892\tactions changed."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Iteration 2, 550\tactions changed."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Iteration 3, 334\tactions changed."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Iteration 4, 224\tactions changed."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Iteration 5, 86\tactions changed."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Iteration 6, 24\tactions changed."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Iteration 7, 6\tactions changed."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Iteration 8, 0\tactions changed."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
+       ]
+      },
+      {
+       "output_type": "pyout",
+       "prompt_number": 22,
+       "text": [
+        "-0.69886028633730768"
+       ]
+      }
+     ],
+     "prompt_number": 22
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "savetxt('RewardFaisantPlanterDP.mat',reward_CSI)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 13
     }
    ],
    "metadata": {}
