Exp12 : Refining the Exp in light of recent changes. Now works as before the Soulless branching.

--- a/Exp12.ipynb
+++ b/Exp12.ipynb
@@ -17,7 +17,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -38,7 +38,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 8
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -60,7 +60,7 @@
         "Card of S 729\n",
         "Card of A 5\n",
         "Card of SA 3645\n",
-        "Iteration 0, 729\tactions changed."
+        "Iteration 0, 888\tactions changed."
        ]
       },
       {
@@ -68,7 +68,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Iteration 0, 578\tactions changed."
+        "Iteration 1, 800\tactions changed."
        ]
       },
       {
@@ -76,7 +76,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Iteration 0, 730\tactions changed."
+        "Iteration 2, 234\tactions changed."
        ]
       },
       {
@@ -84,7 +84,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Iteration 0, 360\tactions changed."
+        "Iteration 3, 50\tactions changed."
        ]
       },
       {
@@ -92,31 +92,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Iteration 0, 190\tactions changed."
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "Iteration 0, 22\tactions changed."
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "Iteration 0, 2\tactions changed."
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "Iteration 0, 0\tactions changed."
+        "Iteration 4, 0\tactions changed."
        ]
       },
       {
@@ -134,12 +110,13 @@
      "collapsed": false,
      "input": [
       "rho = lambda : int(rand()*729) #uniform distribtion over S\n",
-      "D_E = array(Highway.D_func(Pi_E, 1, 100,  rho))"
+      "l_D_E = [array(Highway.D_func(Pi_E, 1, 7,  rho)) for i in range(0,7)]\n",
+      "D_E = vstack(l_D_E)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -154,24 +131,31 @@
       "    return answer\n",
       "\n",
       "feature_expectations_MC = {}\n",
-      "for start_index in range(0,len(D_E)):\n",
-      "    data_MC=D_E[start_index:,:2]\n",
-      "    GAMMAS = range(0,len(data_MC))\n",
-      "    GAMMAS = array(map( lambda x: pow(Gamma,x), GAMMAS))\n",
-      "    state_action = data_MC[0,:2]\n",
-      "    state = data_MC[0,0]\n",
-      "    action = data_MC[0,1]\n",
-      "    mu = MC_mu(data_MC[:,0])\n",
-      "    feature_expectations_MC[str(state_action)] = mu\n",
-      "    for other_action in [a for a in ACTION_SPACE if a != action]:\n",
-      "        state_action=hstack([state,other_action])\n",
-      "        feature_expectations_MC[str(state_action)]=Gamma*mu\n",
-      "        "
+      "d_mu_MC = {}\n",
+      "for episode in l_D_E:\n",
+      "    for start_index in range(0,len(episode)):\n",
+      "        data_MC=episode[start_index:,:2]\n",
+      "        state_action = data_MC[0,:2]\n",
+      "        state = data_MC[0,0]\n",
+      "        action = data_MC[0,1]\n",
+      "        mu = MC_mu(data_MC[:,0])\n",
+      "        try:\n",
+      "            d_mu_MC[str(state_action)].append(mu)\n",
+      "        except KeyError:\n",
+      "            d_mu_MC[str(state_action)] = [mu]\n",
+      "        for other_action in [a for a in ACTION_SPACE if a != action]:\n",
+      "            state_action=hstack([state,other_action])\n",
+      "            try:\n",
+      "                d_mu_MC[str(state_action)].append(Gamma*mu)\n",
+      "            except KeyError:\n",
+      "                d_mu_MC[str(state_action)]=[Gamma*mu]\n",
+      "for sa in d_mu_MC.keys():\n",
+      "    feature_expectations_MC[sa] = mean(d_mu_MC[sa],axis=0)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 21
     },
     {
      "cell_type": "code",
@@ -218,7 +202,7 @@
       "\n",
       "class StructuredClassifier(GradientDescent):\n",
       "    sign=-1.\n",
-      "    Threshold=0.1 #Sensible default\n",
+      "    Threshold=0.01 #Sensible default\n",
       "    T=40 #Sensible default\n",
       "    phi=None\n",
       "    phi_xy=None\n",
@@ -274,7 +258,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 9
+     "prompt_number": 24
     },
     {
      "cell_type": "code",
@@ -292,8 +276,8 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "(100, 1)\n",
-        "Norme du gradient : 0.145520668959, pas : 1.5, iteration : 1"
+        "(49, 1)\n",
+        "Norme du gradient : 0.0713201142104, pas : 1.5, iteration : 1"
        ]
       },
       {
@@ -301,7 +285,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Norme du gradient : 0.145520668959, pas : 1.0, iteration : 2"
+        "Norme du gradient : 0.0713201142104, pas : 1.0, iteration : 2"
        ]
       },
       {
@@ -309,7 +293,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Norme du gradient : 0.145520668959, pas : 0.75, iteration : 3"
+        "Norme du gradient : 0.0713201142104, pas : 0.75, iteration : 3"
        ]
       },
       {
@@ -317,7 +301,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Norme du gradient : 0.145520668959, pas : 0.6, iteration : 4"
+        "Norme du gradient : 0.0713201142104, pas : 0.6, iteration : 4"
        ]
       },
       {
@@ -325,7 +309,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Norme du gradient : 0.145520668959, pas : 0.5, iteration : 5"
+        "Norme du gradient : 0.0713201142104, pas : 0.5, iteration : 5"
        ]
       },
       {
@@ -333,7 +317,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Norme du gradient : 0.145520668959, pas : 0.428571428571, iteration : 6"
+        "Norme du gradient : 0.0713201142104, pas : 0.428571428571, iteration : 6"
        ]
       },
       {
@@ -341,7 +325,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Norme du gradient : 0.145520668959, pas : 0.375, iteration : 7"
+        "Norme du gradient : 0.0713201142104, pas : 0.375, iteration : 7"
        ]
       },
       {
@@ -349,7 +333,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Norme du gradient : 0.137700919831, pas : 0.333333333333, iteration : 8"
+        "Norme du gradient : 0.0713201142104, pas : 0.333333333333, iteration : 8"
        ]
       },
       {
@@ -357,7 +341,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Norme du gradient : 0.137700919831, pas : 0.3, iteration : 9"
+        "Norme du gradient : 0.0713201142104, pas : 0.3, iteration : 9"
        ]
       },
       {
@@ -365,7 +349,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Norme du gradient : 0.102219475342, pas : 0.272727272727, iteration : 10"
+        "Norme du gradient : 0.0713201142104, pas : 0.272727272727, iteration : 10"
        ]
       },
       {
@@ -373,7 +357,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Norme du gradient : 0.0703348907097, pas : 0.25, iteration : 11"
+        "Norme du gradient : 0.0713201142104, pas : 0.25, iteration : 11"
        ]
       },
       {
@@ -381,11 +365,243 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Gradient de norme : 0.0703348907097, a l'iteration : 11\n"
+        "Norme du gradient : 0.0713201142104, pas : 0.230769230769, iteration : 12"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.0713201142104, pas : 0.214285714286, iteration : 13"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.0713201142104, pas : 0.2, iteration : 14"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.0713201142104, pas : 0.1875, iteration : 15"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.0713201142104, pas : 0.176470588235, iteration : 16"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.0713201142104, pas : 0.166666666667, iteration : 17"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.0713201142104, pas : 0.157894736842, iteration : 18"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.0713201142104, pas : 0.15, iteration : 19"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.0713201142104, pas : 0.142857142857, iteration : 20"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.0713201142104, pas : 0.136363636364, iteration : 21"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.0713201142104, pas : 0.130434782609, iteration : 22"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.0688846232288, pas : 0.125, iteration : 23"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.0643693856023, pas : 0.12, iteration : 24"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.0643693856023, pas : 0.115384615385, iteration : 25"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.0643693856023, pas : 0.111111111111, iteration : 26"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.0643693856023, pas : 0.107142857143, iteration : 27"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.0643693856023, pas : 0.103448275862, iteration : 28"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.0643693856023, pas : 0.1, iteration : 29"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.060539751023, pas : 0.0967741935484, iteration : 30"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.060539751023, pas : 0.09375, iteration : 31"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.060539751023, pas : 0.0909090909091, iteration : 32"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.060539751023, pas : 0.0882352941176, iteration : 33"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.060539751023, pas : 0.0857142857143, iteration : 34"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.060539751023, pas : 0.0833333333333, iteration : 35"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.060539751023, pas : 0.0810810810811, iteration : 36"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.060539751023, pas : 0.0789473684211, iteration : 37"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.060539751023, pas : 0.0769230769231, iteration : 38"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.060539751023, pas : 0.075, iteration : 39"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.058943902436, pas : 0.0731707317073, iteration : 40"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Gradient de norme : 0.058943902436, a l'iteration : 40\n"
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 25
     },
     {
      "cell_type": "code",
@@ -440,7 +656,7 @@
        ]
       }
      ],
-     "prompt_number": 15
+     "prompt_number": 26
     },
     {
      "cell_type": "code",
@@ -449,11 +665,9 @@
       "reward_SCIRL.shape\n",
       "Highway2 = MDP(P,reward_SCIRL)\n",
       "mPi_A, V_A, Pi_A = Highway2.optimal_policy()\n",
-      "true_V_A = linalg.solve( identity( 729 ) - 0.9*dot(mPi_A,P), dot( mPi_A, R) )\n",
       "Highway3 = MDP(P,rand(3645,1))\n",
       "mPi_R, V_R, Pi_R = Highway3.optimal_policy()\n",
-      "true_V_R = linalg.solve( identity( 729 ) - 0.9*dot(mPi_R,P), dot( mPi_R, R) )\n",
-      "mean(true_V_A),mean(true_V_R),mean(V_E)"
+      "Highway.evaluate(mPi_A),Highway.evaluate(mPi_R),Highway.evaluate(mPi_E)"
      ],
      "language": "python",
      "metadata": {},
@@ -468,7 +682,7 @@
         "Card of S 729\n",
         "Card of A 5\n",
         "Card of SA 3645\n",
-        "Iteration 0, 729\tactions changed."
+        "Iteration 0, 1162\tactions changed."
        ]
       },
       {
@@ -476,7 +690,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Iteration 0, 488\tactions changed."
+        "Iteration 1, 872\tactions changed."
        ]
       },
       {
@@ -484,7 +698,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Iteration 0, 510\tactions changed."
+        "Iteration 2, 566\tactions changed."
        ]
       },
       {
@@ -492,7 +706,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Iteration 0, 328\tactions changed."
+        "Iteration 3, 318\tactions changed."
        ]
       },
       {
@@ -500,7 +714,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Iteration 0, 216\tactions changed."
+        "Iteration 4, 152\tactions changed."
        ]
       },
       {
@@ -508,7 +722,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Iteration 0, 150\tactions changed."
+        "Iteration 5, 68\tactions changed."
        ]
       },
       {
@@ -516,7 +730,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Iteration 0, 42\tactions changed."
+        "Iteration 6, 6\tactions changed."
        ]
       },
       {
@@ -524,7 +738,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Iteration 0, 0\tactions changed."
+        "Iteration 7, 0\tactions changed."
        ]
       },
       {
@@ -545,7 +759,7 @@
         "Card of S 729\n",
         "Card of A 5\n",
         "Card of SA 3645\n",
-        "Iteration 0, 729\tactions changed."
+        "Iteration 0, 1170\tactions changed."
        ]
       },
       {
@@ -553,7 +767,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Iteration 0, 468\tactions changed."
+        "Iteration 1, 764\tactions changed."
        ]
       },
       {
@@ -561,7 +775,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Iteration 0, 250\tactions changed."
+        "Iteration 2, 450\tactions changed."
        ]
       },
       {
@@ -569,7 +783,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Iteration 0, 112\tactions changed."
+        "Iteration 3, 210\tactions changed."
        ]
       },
       {
@@ -577,7 +791,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Iteration 0, 30\tactions changed."
+        "Iteration 4, 124\tactions changed."
        ]
       },
       {
@@ -585,7 +799,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Iteration 0, 2\tactions changed."
+        "Iteration 5, 40\tactions changed."
        ]
       },
       {
@@ -593,7 +807,15 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Iteration 0, 0\tactions changed."
+        "Iteration 6, 6\tactions changed."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Iteration 7, 0\tactions changed."
        ]
       },
       {
@@ -605,21 +827,13 @@
       },
       {
        "output_type": "pyout",
-       "prompt_number": 16,
+       "prompt_number": 28,
        "text": [
-        "(2.3046507279708814, -0.64960903174639162, 4.8854580487980499)"
+        "(7.2179650649218194, 0.53405279303991415, 7.7439104526748785)"
        ]
       }
      ],
-     "prompt_number": 16
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
+     "prompt_number": 28
     }
    ],
    "metadata": {}
